--- a/package.json
+++ b/package.json
@@ -11,8 +11,18 @@
   "author": "thinceller",
   "license": "ISC",
   "dependencies": {
-    "next": "^7.0.2",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0"
+    "next": "^9.0.1",
+    "next-redux-wrapper": "^3.0.0-alpha.3",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-redux": "^7.1.0",
+    "redux": "^4.0.4",
+    "redux-devtools-extension": "^2.13.8"
+  },
+  "devDependencies": {
+    "@types/next": "^8.0.6",
+    "@types/node": "^12.6.2",
+    "@types/react": "^16.8.23",
+    "typescript": "^3.5.3"
   }
 }
