--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "eslint-check": "eslint --print-config .eslintrc.json | eslint-config-prettier-check"
   },
   "author": "thinceller",
   "license": "ISC",
@@ -23,6 +24,14 @@
     "@types/next": "^8.0.6",
     "@types/node": "^12.6.2",
     "@types/react": "^16.8.23",
+    "@typescript-eslint/eslint-plugin": "^1.12.0",
+    "@typescript-eslint/parser": "^1.12.0",
+    "eslint": "^6.0.1",
+    "eslint-config-prettier": "^6.0.0",
+    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-react": "^7.14.2",
+    "eslint-plugin-react-hooks": "^1.6.1",
+    "prettier": "^1.18.2",
     "typescript": "^3.5.3"
   }
 }
